--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -1,3 +1,24 @@
+.home {
+  padding: 15px 0;
+}
+
+.home .notes h4 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  overflow: hidden;
+  line-height: 1.5;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.home .notes .primary-text {
+  margin-bottom: 5px;
+}
+
+.home .notes .secondary-text {
+  color: #666;
+}
+
 .home .lander {
   padding: 80px 0;
   text-align: center;
